--- a/conf.d/mock_api_gateway.conf
+++ b/conf.d/mock_api_gateway.conf
@@ -1,36 +1,31 @@
-# --- GRUPO DE SERVIDORES PARA O SERVIÇO DE PAGAMENTOS ---
-# Aqui configuramos o Balanceamento de Carga e a Tolerância a Falhas
-upstream payments_service {
+upstream a_service {
 	server 127.0.0.1:8001 max_fails=2 fail_timeout=10s;
 	server 127.0.0.1:8002 max_fails=2 fail_timeout=10s;
+	server 127.0.0.1:8003 max_fails=2 fail_timeout=10s;
+	server 127.0.0.1:8004 max_fails=2 fail_timeout=10s;
+	server 127.0.0.1:8005 max_fails=2 fail_timeout=10s;
 }
 
-# --- GRUPO DE SERVIDORES PARA O SERVIÇO DE NOTIFICAÇÕES ---
-upstream notifications_service {
-    # Apenas uma instância
-    server 127.0.0.1:9001;
+upstream b_service {
+    server 127.0.0.1:9001 max_fails=2 fail_timeout=10s;
+    server 127.0.0.1:9002 max_fails=2 fail_timeout=10s;
+    server 127.0.0.1:9003 max_fails=2 fail_timeout=10s;
+    server 127.0.0.1:9004 max_fails=2 fail_timeout=10s;
+    server 127.0.0.1:9005 max_fails=2 fail_timeout=10s;
 }
 
-# --- SERVIDOR PRINCIPAL (GATEWAY) ---
 server {
 	listen 80;
-	server_name payments.localhost; # <-- A MÁGICA ACONTECE AQUI
 
-	location / {
-		proxy_pass http://payments_service;
+	location /api/a/ {
+		proxy_pass http://a_service;
 
 		proxy_set_header Host $host;
 		proxy_set_header X-Real-IP $remote_addr;
 	}
-}
 
-# Virtual Host 2: Responde apenas para "notifications.localhost"
-server {
-	listen 80;
-	server_name notifications.localhost; # <-- ESTE RESPONDE A OUTRO NOME
-
-	location / {
-		proxy_pass http://notifications_service;
+	location /api/b/ {
+		proxy_pass http://b_service;
 
 		proxy_set_header Host $host;
 		proxy_set_header X-Real-IP $remote_addr;
